------------------------------------------------------------------------
r2184 | gaser | 2023-03-22 17:25:30

Changed paths:
 M CHANGES.txt
 M Contents.m
 M doc/cat.html
 M doc/index.html

Changed: Added more detailed description of WMH detection to manual.
------------------------------------------------------------------------
r2183 | gaser | 2023-03-17 15:19:17

Changed paths:
 M CAT.glnx86/CAT_3dVol2Surf
 M CAT.glnx86/CAT_AddValuesToSurf
 M CAT.glnx86/CAT_AverageSurfaces
 M CAT.glnx86/CAT_BlurSurfHK
 M CAT.glnx86/CAT_Central2Pial
 M CAT.glnx86/CAT_DeformSurf
 M CAT.glnx86/CAT_DumpCurv
 M CAT.glnx86/CAT_DumpSurfArea
 M CAT.glnx86/CAT_DumpSurfaceRatio
 M CAT.glnx86/CAT_FixTopology
 M CAT.glnx86/CAT_FractalDimension
 M CAT.glnx86/CAT_Hausdorff
 M CAT.glnx86/CAT_Isometize
 M CAT.glnx86/CAT_MarchingCubesGenus0
 M CAT.glnx86/CAT_MarkDefects
 M CAT.glnx86/CAT_RefineMesh
 M CAT.glnx86/CAT_ResampleSphericalSurf
 M CAT.glnx86/CAT_ResampleSphericalSurfSPH
 M CAT.glnx86/CAT_ResampleSurf
 M CAT.glnx86/CAT_SelfIntersect
 M CAT.glnx86/CAT_SeparatePolygon
 M CAT.glnx86/CAT_SmoothConvexity
 M CAT.glnx86/CAT_SulcusDepth
 M CAT.glnx86/CAT_Surf2Sphere
 M CAT.glnx86/CAT_Surf2Vol
 M CAT.glnx86/CAT_SurfDistance
 M CAT.glnx86/CAT_WarpSurf
 M CAT.maci64/CAT_3dVol2Surf
 M CAT.maci64/CAT_AddValuesToSurf
 M CAT.maci64/CAT_AverageSurfaces
 M CAT.maci64/CAT_BlurSurfHK
 M CAT.maci64/CAT_Central2Pial
 M CAT.maci64/CAT_DeformSurf
 M CAT.maci64/CAT_DumpCurv
 M CAT.maci64/CAT_DumpSurfArea
 M CAT.maci64/CAT_DumpSurfaceRatio
 M CAT.maci64/CAT_FixTopology
 M CAT.maci64/CAT_FractalDimension
 M CAT.maci64/CAT_Hausdorff
 M CAT.maci64/CAT_Isometize
M  CAT.maci64/CAT_MarchingCubesGenus0
 M CAT.maci64/CAT_MarkDefects
 M CAT.maci64/CAT_RefineMesh
 M CAT.maci64/CAT_ResampleSphericalSurf
 M CAT.maci64/CAT_ResampleSphericalSurfSPH
 M CAT.maci64/CAT_ResampleSurf
 M CAT.maci64/CAT_SelfIntersect
 M CAT.maci64/CAT_SeparatePolygon
 M CAT.maci64/CAT_SmoothConvexity
 M CAT.maci64/CAT_SulcusDepth