@@ -3978,7 +3978,8 @@
             <p>R.A. Yotter, G. Ziegler, P.M. Thompson, C. Gaser (2011d). <a href="http://www.neuro.uni-jena.de/hbm2011/Yotter02.pdf">
             Diffeometric Anatomical Registration on the Surface.</a> OHBM 2011</p>
 
-            <p class="hl">04-11-2022<br>
+ <!--             <p class="hl">04-11-2022<br>
+  -->
             Christian Gaser <a href="mailto:christian.gaser@uni-jena.de">christian.gaser@uni-jena.de</a><br>
             Florian Kurth <a href="mailto:f.kurth@auckland.ac.nz">f.kurth@auckland.ac.nz</a><br>
             Robert Dahnke <a href="mailto:robert.dahnke@uni-jena.de">robert.dahnke@uni-jena.de</a></p>
